added 'little about us' blog and 'our services' cards

--- a/index.html
+++ b/index.html
@@ -44,6 +44,46 @@
 			</div>
 			<button><p>Hire US</p></button>
 		</section>
+		<div class="container">
+			<div><img src="https://images.pexels.com/photos/7103/writing-notes-idea-conference.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" width="675" height="427" alt=""></div>
+			<div>
+				<div class="about-us">
+					<h2>
+					A little about us
+					</h2>
+					<img src="img/Shape2.png" alt=""><img src="img/Shape1.png" alt="">
+					<p>We are  a company based in india with the motto “Digitalally 
+					   Designed India”. We are  a company based in india with the motto
+					   “Digitalally  Designed India”. We are  a company based in india
+					   with the motto “Digitalally  Designed India”.</p><br>
+					<p>We are  a company based in india with the motto “Digitalally
+					   Designed India”. We are  a company based in india with the 
+					   motto “Digitalally Designed India”.  We are  a company based in
+					   India with the motto “Digitalally Designed India”.  We are  a 
+					   company based in india with the motto “Digitalally Designed India”.</p>
+				</div>
+			</div>
+		</div>
+		<div class="services">
+			<div class="services-container">
+			<div class="services-img-left-padding"> <img src="img/Shape3.png" alt="" ><img src="img/Shape4.png" alt=""> </div>
+			<div> <p>OUR SERVICES</p> </div>
+			<div> <img src="img/Shape4.png" alt=""><img src="img/Shape3.png" alt=""> </div>
+			</div>
+		</div>
+		<div class="card-container">
+			<div class="cadrs">
+				<div> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p> 
+					<button>MORE DETAILS</button> </div>
+
+				<div> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p> 
+					<button>MORE DETAILS</button> </div>
+
+				<div> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p>
+					<button>MORE DETAILS</button> </div>
+
+			</div>
+		</div>
 	</main>
 
 	<script
