added feedback block and ceo-cards

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p> 
 					<button>MORE DETAILS</button> </div>
 
-				<div> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p> 
+				<div class="border"> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p> 
 					<button>MORE DETAILS</button> </div>
 
 				<div> <img src="img/1493843058_Web_Development.png" alt=""> <h2>Web DEVELOPMENT</h2> <p>We provide the best world  class web development service We provide the best world class web development service</p>
@@ -84,6 +84,64 @@
 
 			</div>
 		</div>
+
+		<div class="services">
+			<div class="services-container">
+				<div class="services-img-left-padding"> <img src="img/Shape3.png" alt="" ><img src="img/Shape4.png" alt=""> </div>
+					<div> <p>Feedback</p> </div>
+				<div> <img src="img/Shape4.png" alt=""><img src="img/Shape3.png" alt=""> </div>
+			</div>
+		</div>
+
+		<div class="CEO-cards">
+			<div class="Shape5">
+				<p>It was always a pleasure
+				   doing bussiness with them. 
+				   I love the quality of work.</p><br><img src="img/Shape5.png" alt="">
+				   <div class="arrows"> <img src="img/left-arrow.png" alt=""> <span>1/10</span> <img src="img/right-arrow.png" alt=""> </div>
+			</div>
+			<div>
+				<div class="CEO-PICTURE1">
+
+						<span class="span1">
+							01
+						</span>
+						<span class="span2">
+							Imran Khan
+							<br>
+							CEO, Vesso
+						</span>
+
+				</div>
+			</div>
+
+				<div class="CEO-PICTURE2">
+
+						<span class="span1">
+							01
+						</span>
+						<span class="span2">
+							Imran Khan
+							<br>
+							CEO, Vesso
+						</span>
+						
+				</div>
+
+				<div class="CEO-PICTURE3">
+
+						<span class="span1">
+							01
+						</span>
+						<span class="span2">
+							Imran Khan
+							<br>
+							CEO, Vesso
+						</span>
+						
+				</div>
+		</div>
+
 	</main>
 
 	<script
