started 'clients' block

--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
 				</div>
 		</div>
 
+		<div class="Clients">
+			<div class="Clients-container">
+				<div class="Clients-img-left-padding"> <img src="img/Shape3.png" alt="" ><img src="img/Shape4.png" alt=""> </div>
+					<div> <p>Clients</p> </div>
+				<div> <img src="img/Shape4.png" alt=""><img src="img/Shape3.png" alt=""> </div>
+			</div>
+		</div>
 	</main>
 
 	<script
